--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,10 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
-    def room_version = "2.5.0-alpha01"
+    def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
