--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
 
     implementation 'androidx.compose.material3:material3:1.0.0-alpha12'
+
+    implementation("org.burnoutcrew.composereorderable:reorderable:0.9.0")
 }
