--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.0-alpha12'
 
     implementation("org.burnoutcrew.composereorderable:reorderable:0.9.0")
+
+    implementation "com.google.accompanist:accompanist-flowlayout:0.24.10-beta"
+
 }
