--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,35 +48,40 @@ android {
 }
 
 dependencies {
-    def compose_version = '1.2.0-beta02'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.compose.material:material:1.3.0'
+
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    implementation composeBom
+    androidTestImplementation composeBom
+    implementation "androidx.compose.ui:ui"
+    implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.runtime:runtime-livedata"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
+    implementation "androidx.compose.material:material-icons-extended"
+
+    implementation 'androidx.core:core-ktx:1.9.0'
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
-    def material_version = "1.6.0"
+    def material_version = "1.7.0"
     implementation "com.google.android.material:material:$material_version"
-
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha12'
 
     implementation("org.burnoutcrew.composereorderable:reorderable:0.9.0")
 
     implementation "com.google.accompanist:accompanist-flowlayout:0.24.10-beta"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
 }
