--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 apply plugin: 'kotlin-kapt'
 
@@ -49,6 +50,7 @@ android {
 
 dependencies {
     implementation 'androidx.compose.material:material:1.3.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
 
     def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
     implementation composeBom
@@ -67,7 +69,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     def room_version = "2.4.2"
